# collaborative-filtering-sr

./: .gitignore  README.md  pyproject.toml  requirements.txt
collab_filtering/: __init__.py  utils.py
examples/: song_recommendation.ipynb
tests/: test_model.py
