[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collab-filtering"
version = "1.0.0"
description = "A Python package for collaborative filtering"
authors = [
    { name="Bastian Lipka", email="lipka.bastian04@gmail.com" }
]
readme = "README.md"
license = { text = "Apache License Version 2.0" }
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
]

[project.urls]
"Homepage" = "https://github.com/kirbs-btw/collaborative-filtering-sr"
"Bug Tracker" = "https://github.com/kirbs-btw/collaborative-filtering-sr/issues"

[tool.setuptools.packages.find]
where = ["collab_filtering"]
